--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   </section><!-- / #code-editor-scripts -->
 
   <section id='Automator-scripts'>
-<p>The Mac OS has actually added a few things I used to have scripts for, but no matter. These are a few of what I still use.</p>
+<p>The Mac OS has actually added a few things I used to have scripts for, but no matter. These are a few <b>Automator scripts</b> that I still use.</p>
 <p>You must have an Apple computer to be able to use these.</p>
 <h4><a href='Automator-scripts'>Here on GitHub</a></h4>
 	<ul>
