--- a/error/401/index.html
+++ b/error/401/index.html
@@ -39,7 +39,7 @@
 	
 
 	<link href="https://fonts.googleapis.com/css?family=Metamorphous" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="/style-min.css" />
+	<link rel="stylesheet" type="text/css" href="/setup/style-min.css" />
 </head>
 
 <body id="page-wrapper">
