--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- Schema.org markup for Google+ -->
 	<meta itemprop="name" content="Home">
 	<meta itemprop="description" content="Welcome to the GitHub home for Misti Wolanski, a.k.a. Carradee">
-	<meta itemprop="image" content="https://carradee.github.io/setup/img/me-lg.jpg">
+	
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
@@ -27,7 +27,7 @@
 	<meta name="twitter:title" content="Home">
 	<meta name="twitter:description" content="Welcome to the GitHub home for Misti Wolanski, a.k.a. Carradee">
 	<meta name="twitter:creator" content="@carradee">
-	<meta name="twitter:image" content="https://carradee.github.io/setup/img/me-lg.jpg">
+	
 
 	<!-- Open Graph data -->
 	<meta property="og:type" content="article" />
@@ -36,7 +36,7 @@
 	<meta property="fb:admins" content="279082568770313" />
 	<meta property="og:title" content="Home" />
 	<meta property="og:description" content="Welcome to the GitHub home for Misti Wolanski, a.k.a. Carradee">
-	<meta property="og:image" content="https://carradee.github.io/setup/img/me-lg.jpg" />
+	
 
 	<link href="https://fonts.googleapis.com/css?family=Metamorphous" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/setup/style-min.css" />
@@ -45,6 +45,7 @@
 <body id="page-wrapper">
 
 <aside id='page-sidebar'>
+<a href="https://your-url" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 <nav id='page-navigation'>
 
 	<ul class='top-menu'>
@@ -84,7 +85,7 @@
 
   <section id='front-end-code'>
 <p>I usually can&rsquo;t find what I&rsquo;m wanting, so I have to build <b>snippets of front-end code</b>. If I&rsquo;m doing that anyway, why not convert some to share?</p>
-<h4><a href='https://github.com/Carradee/front-end-code'>Here on GitHub</a></h4>
+<h4><a href='https://github.com/Carradee/front-end-code/'>Here on GitHub</a></h4>
 <ul>
 	<li>A custom master stylesheet set that&rsquo;s more thorough than either Reset or Normalize. (Includes overrides for printed pages!)</li>
 	<li>A PHP-based CSS minifier.</li>
@@ -99,7 +100,7 @@
 
   <section id='code-editor-scripts'>
 <p>I have a few dozen <b>code editor text filters</b> I&rsquo;ve developed to make my life easier.</p>
-<h4><a href='code-editor-scripts'>Here on GitHub</a></h4>
+<h4><a href='https://github.com/Carradee/code-editor-scripts/'>Here on GitHub</a></h4>
 <ul>
 	<li>HTML Entities <—> Special Characters - <b>PHP version</b></li>
 	<li>HTML Entities <—> Special Characters - <b>Python version</b></li>
@@ -109,7 +110,7 @@
   <section id='Automator-scripts'>
 <p>The Mac OS has actually added a few things I used to have scripts for, but no matter. These are a few <b>Automator scripts</b> that I still use.</p>
 <p>You must have an Apple computer to be able to use these.</p>
-<h4><a href='Automator-scripts'>Here on GitHub</a></h4>
+<h4><a href='https://github.com/Carradee/Automator-scripts/'>Here on GitHub</a></h4>
 	<ul>
 		<li>Convert to HTML; uses textutil shell script</li>
 		<li>Remove Spaces from Filename; uses built-in Finder functions</li>
