--- a/about/index.html
+++ b/about/index.html
@@ -6,28 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<meta name="author" content="Misti Wolanski" />
-	<link rel="author" href="//plus.google.com/118180692413405069351"/>
-	<link rel="publisher" href="//plus.google.com/u/0/118180692413405069351/" />
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 	<link rel='canonical' href="https://carradee.github.io/about/" />
 	
-	
-	<title> About Me | Carradee @ GitHub</title>
-	
-	
-
-	<!-- Schema.org markup for Google+ -->
-	<meta itemprop="name" content="About Me">
-	
-	
-
-	<!-- Twitter Card data -->
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="@carradee">
-	<meta name="twitter:title" content="About Me">
-	
-	<meta name="twitter:creator" content="@carradee">
-	
+	<title>About Me | Carradee @ GitHub</title>
 
 	<!-- Open Graph data -->
 	<meta property="og:type" content="article" />
@@ -36,58 +18,41 @@
 	<meta property="fb:admins" content="279082568770313" />
 	<meta property="og:title" content="About Me" />
 	
-	
-
 	<link href="https://fonts.googleapis.com/css?family=Metamorphous" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="/setup/style-min.css" />
+	<link rel="stylesheet" type="text/css" href="/setup/css/style.css" />
 </head>
 
 <body id="page-wrapper">
 
 <aside id='page-sidebar'>
-<a href="https://github.com/Carradee" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
-<nav id='page-navigation'>
-
-	<ul class='top-menu'>
-		<li><a href='https://carradee.github.io/'>Home</a></li>
-		
+	<a href="https://github.com/Carradee" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+	<nav id='page-navigation'>
+		<ul class='top-menu'>
+			<li><a href='https://carradee.github.io/'>Home</a></li>
 			<li><a href='https://carradee.github.io/about/'>About Me</a></li>
-		
-		<li><a href='http://mistiwolanski.com/contact-me.php'>Contact Me</a></li>
-	</ul>
-</nav><!-- / #page-navigation -->
+		</ul>
+	</nav><!-- / #page-navigation -->
 
-<header id='page-header'>
-	<h1 class='site-title'>Carradee @ GitHub</h1>
-	<p class='site-subtitle'>a.k.a.<br><a href='http://mistiwolanski.com'>Misti Wolanski</a></p>
-</header><!-- / #page-header -->
- 
-<footer id='page-footer' class='small'>
-	<p>© Misti Wolanski  2017 <br>All Rights Reserved.</p>
-	<hr>
-	<p>This page uses the <a href='https://jekyllrb.com'>Jekyll</a> CMS.</p>
-</footer><!-- / #page-footer -->
- 
+	<header id='page-header'>
+		<h1 class='site-title'>Carradee @ GitHub</h1>
+		<p class='site-subtitle'>a.k.a.<br><a href='http://mistiwolanski.com'>Misti Wolanski</a></p>
+	</header><!-- / #page-header -->
+	
+	<footer id='page-footer' class='small'>
+		<p>© Misti Wolanski 2023 <br>All Rights Reserved.</p>
+		<hr>
+		<p>This page uses the <a href='https://jekyllrb.com'>Jekyll</a> CMS.</p>
+	</footer><!-- / #page-footer -->
 </aside><!-- / #page-sidebar -->
 
 <main id='page-body'>
-	<p>Publication is about communication. It doesn&rsquo;t matter if it&rsquo;s a book, a website, or an app&mdash;you&rsquo;re communicating <i>something</i>, whether it&rsquo;s instructions how to do something or that your game is worth playing.</p>
+<p>Publication is about communication. It doesn&rsquo;t matter if it&rsquo;s a book, a website, or an app&mdash;you&rsquo;re communicating <i>something</i>, whether it&rsquo;s instructions how to do something or that your game is worth playing.</p>
 <p>Communication is what you say and how you say it. Maybe you say it directly via an essay or book, or maybe you show it with a story or a game.</p>
 <p>That&rsquo;s the &ldquo;big picture&rdquo; of how it works: General style and medium.</p>
 <p>There&rsquo;s also the &ldquo;little picture&rdquo;, which gets down to the specifics of what you include, what you omit, and how you present it.</p>
 <p>I mean, look at this page. Do I look like someone you go to if you need a video editor? No! And that&rsquo;s on purpose.</p>
 <p>Images are popular and have a lot of factors that people don&rsquo;t bother to think about, but the fact is that images are very forgiving. Even a crappy layout can still catch the eye if the images are good.</p>
 <p>Text-based designs require more attention to detail</p>
-
-<figure class='img-circle'>
-	<img src='/img/me.jpg'
-		srcset='/img/me-md.jpg 1800w, /img/me-lg.jpg 3200w'
-	/>
-	<figcaption>
-		Me, before I went all <i>Waterworld</i><sup>*</sup> on my hair.<br>
-		<span class='note'><sup>*</sup>Okay, I used scissors.</span>
-	</figcaption>
-</figure>
 <p>I&rsquo;m not a Jane of All Trades, but I am a logical-verbal individual. Programming and writing are comparable; the rules of how they function just differ, and I bridge those gaps.</p>
 </main>
 
